antigen/tests/ui_promoted_draft/no_new_associated_fn.stderr
error[E0599]: no function or associated item named `new` found for struct `PromotedDraft` in the current scope
  --> tests/ui_promoted_draft/no_new_associated_fn.rs:14:34
   |
14 |     let _forged = PromotedDraft::new(fp);
   |                                  ^^^ function or associated item not found in `PromotedDraft`
   |
help: there is a method `ne` with a similar name
   |
14 -     let _forged = PromotedDraft::new(fp);
14 +     let _forged = PromotedDraft::ne(fp);
   |
